--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -125,7 +125,7 @@ services:
       KAFKA_CFG_GROUP_INITIAL_REBALANCE_DELAY_MS: 2
       KAFKA_LOG_DIR: '/tmp/kraft-combined-logs'
 
-# 뭔지 잘 모름.
+# 카프카를 모니터링 해주는 서비스.
   KafkaWebUiService:
     image: provectuslabs/kafka-ui:latest
     restart: unless-stopped
@@ -133,7 +133,7 @@ services:
     ports:
       - '19000:8080'
     environment:
-      - KAFKA_CLUSTERS_0_NAME=Local-Kraft-Cluster
+      - KAFKA_CLUSTERS_0_NAME=Kraft-Cluster
       - KAFKA_CLUSTERS_0_BOOTSTRAPSERVERS=Kafka00Service:9092,Kafka01Service:9092,Kafka02Service:9092
       - DYNAMIC_CONFIG_ENABLED=true
       - KAFKA_CLUSTERS_0_AUDIT_TOPICAUDITENABLED=true
