--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -127,17 +127,18 @@ services:
 
 # 카프카를 모니터링 해주는 서비스.
   KafkaWebUiService:
-    image: provectuslabs/kafka-ui:latest
-    restart: unless-stopped
-    container_name: KafkaWebUiContainer
+    image: provectuslabs/kafka-ui:latest  # KafkaWebUiService에 사용할 Docker 이미지를 지정합니다. 여기서는 최신 버전의 Provectus Kafka UI 이미지를 사용합니다.
+    restart: unless-stopped  # 컨테이너가 중지되거나 문제가 발생한 경우 자동으로 재시작되도록 설정합니다. 사용자가 명시적으로 중지하지 않는 한 계속 재시작됩니다.
+    container_name: KafkaWebUiContainer  # Docker 컨테이너의 이름을 지정합니다. 이를 통해 컨테이너를 쉽게 식별할 수 있습니다.
     ports:
-      - '19000:8080'
+      - '19000:8080'  # 호스트 머신의 포트 19000을 컨테이너 내의 포트 8080으로 포워딩합니다. 브라우저에서 호스트의 포트 19000으로 접속하면 Kafka UI에 접근할 수 있습니다.
     environment:
-      - KAFKA_CLUSTERS_0_NAME=Kraft-Cluster
-      - KAFKA_CLUSTERS_0_BOOTSTRAPSERVERS=Kafka00Service:9092,Kafka01Service:9092,Kafka02Service:9092
-      - DYNAMIC_CONFIG_ENABLED=true
-      - KAFKA_CLUSTERS_0_AUDIT_TOPICAUDITENABLED=true
-      - KAFKA_CLUSTERS_0_AUDIT_CONSOLEAUDITENABLED=true
-      #- KAFKA_CLUSTERS_0_METRICS_PORT=9999
+      - KAFKA_CLUSTERS_0_NAME=Local-Kraft-Cluster  # 연결할 Kafka 클러스터의 이름을 지정합니다. 이 이름은 Kafka UI 내에서 클러스터를 식별하는 데 사용됩니다.
+      - KAFKA_CLUSTERS_0_BOOTSTRAPSERVERS=kafka-1:29092,kafka-2:39092,kafka-3:49092  # Kafka 클러스터의 브로커 주소를 지정합니다. 각 브로커의 호스트명과 포트를 콤마로 구분하여 나열합니다.
+      - DYNAMIC_CONFIG_ENABLED=true  # 동적 구성 변경을 활성화합니다. 이를 통해 실행 중인 Kafka 클러스터의 설정을 실시간으로 변경할 수 있습니다.
+      - KAFKA_CLUSTERS_0_AUDIT_TOPICAUDITENABLED=true  # 토픽 감사(auditing) 기능을 활성화합니다. 이를 통해 Kafka 클러스터에서 수행된 토픽 관련 작업들을 추적할 수 있습니다.
+      - KAFKA_CLUSTERS_0_AUDIT_CONSOLEAUDITENABLED=true  # 콘솔에서의 감사(auditing) 로그 출력을 활성화합니다. 이를 통해 감사 로그를 콘솔에 출력할 수 있습니다.
+      - KAFKA_CLUSTERS_0_METRICS_PORT=9999  # 주석 처리된 부분으로, 필요 시 Kafka 메트릭 서버의 포트를 지정할 수 있습니다.
     networks:
-      - kafka_network
+      - kafka_network  # KafkaWebUiService가 연결될 Docker 네트워크를 지정합니다. 여기서는 kafka_network라는 사용자 정의 브리지 네트워크를 사용합니다.
+
