--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -53,6 +53,7 @@ services:
       # Listeners
       ALLOW_PLAINTEXT_LISTENER: yes  # PLAINTEXT 리스너(암호화되지 않은 통신)를 허용하도록 설정합니다.
       KAFKA_CFG_LISTENERS: 'PLAINTEXT://0.0.0.0:19092,CONTROLLER://0.0.0.0:9093,PLAINTEXT_HOST://0.0.0.0:9092'  # Kafka가 수신할 리스너들을 설정합니다. 각 리스너는 IP 주소와 포트를 포함합니다.
+      #  세 브로커가 동일한 설정을 갖는 것은 일반적인 구성입니다.
       KAFKA_CFG_ADVERTISED_LISTENERS: PLAINTEXT://kafka-1:19092,PLAINTEXT_HOST://43.202.1.52:29092  # Kafka 클라이언트에게 광고될 리스너 주소를 설정합니다. 외부에서 접근할 수 있는 호스트 및 포트를 지정합니다.
       KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP: 'CONTROLLER:PLAINTEXT,PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT'  # 각 리스너의 보안 프로토콜을 지정합니다.
       KAFKA_CFG_CONTROLLER_LISTENER_NAMES: 'CONTROLLER'  # 컨트롤러 역할을 하는 리스너의 이름을 지정합니다.
@@ -133,12 +134,17 @@ services:
     ports:
       - '19000:8080'  # 호스트 머신의 포트 19000을 컨테이너 내의 포트 8080으로 포워딩합니다. 브라우저에서 호스트의 포트 19000으로 접속하면 Kafka UI에 접근할 수 있습니다.
     environment:
-      - KAFKA_CLUSTERS_0_NAME=Local-Kraft-Cluster  # 연결할 Kafka 클러스터의 이름을 지정합니다. 이 이름은 Kafka UI 내에서 클러스터를 식별하는 데 사용됩니다.
-      - KAFKA_CLUSTERS_0_BOOTSTRAPSERVERS=kafka-1:29092,kafka-2:39092,kafka-3:49092  # Kafka 클러스터의 브로커 주소를 지정합니다. 각 브로커의 호스트명과 포트를 콤마로 구분하여 나열합니다.
+      - KAFKA_CLUSTERS_0_NAME= Kraft-Cluster  # 연결할 Kafka 클러스터의 이름을 지정합니다. 이 이름은 Kafka UI 내에서 클러스터를 식별하는 데 사용됩니다.
+      - KAFKA_CLUSTERS_0_BOOTSTRAPSERVERS=kafka-1:19092,kafka-2:19092,kafka-3:19092  # Kafka 클러스터의 브로커 주소를 지정합니다. 각 브로커의 호스트명과 포트를 콤마로 구분하여 나열합니다.
+      # KAFKA_CFG_LISTENERS에 적힌걸로 해야함. 그중 KAFKA_INTER_BROKER_LISTENER_NAME의 이름과 일치하는 걸로
       - DYNAMIC_CONFIG_ENABLED=true  # 동적 구성 변경을 활성화합니다. 이를 통해 실행 중인 Kafka 클러스터의 설정을 실시간으로 변경할 수 있습니다.
       - KAFKA_CLUSTERS_0_AUDIT_TOPICAUDITENABLED=true  # 토픽 감사(auditing) 기능을 활성화합니다. 이를 통해 Kafka 클러스터에서 수행된 토픽 관련 작업들을 추적할 수 있습니다.
       - KAFKA_CLUSTERS_0_AUDIT_CONSOLEAUDITENABLED=true  # 콘솔에서의 감사(auditing) 로그 출력을 활성화합니다. 이를 통해 감사 로그를 콘솔에 출력할 수 있습니다.
       - KAFKA_CLUSTERS_0_METRICS_PORT=9999  # 주석 처리된 부분으로, 필요 시 Kafka 메트릭 서버의 포트를 지정할 수 있습니다.
     networks:
-      - kafka_network  # KafkaWebUiService가 연결될 Docker 네트워크를 지정합니다. 여기서는 kafka_network라는 사용자 정의 브리지 네트워크를 사용합니다.
+      - kafka_network 
+    depends_on:
+      - kafka-1
+      - kafka-2
+      - kafka-3
 
